# esp-components

./: .clang-format  .gitignore  README.md  sdkconfig.defaults
components/ocs_core/: CMakeLists.txt  Kconfig  async_flag.cpp  async_flag.h  async_flag_isr.cpp  async_flag_isr.h  basic_async_flag.cpp  basic_async_flag.h  basic_static_mutex.cpp  basic_static_mutex.h  basic_static_recursive_mutex.cpp  basic_static_recursive_mutex.h  bit_ops.cpp  bit_ops.h  cjson_array_formatter.cpp  cjson_array_formatter.h  cjson_builder.h  cjson_object_formatter.cpp  cjson_object_formatter.h  cond.cpp  cond.h  container_ops.h  file_stream_reader.cpp  file_stream_reader.h  future.cpp  future.h  iasync_flag.h  iclock.h  ilocker.h  irandomizer.h  istream_reader.h  istream_writer.h  lock_guard.cpp  lock_guard.h  log.h  macros.h  noncopyable.h  operation_guard.cpp  operation_guard.h  rate_limiter.cpp  (+20 more)
components/ocs_diagnostic/: CMakeLists.txt  acc_persistent_counter.cpp  acc_persistent_counter.h  basic_counter.cpp  basic_counter.h  basic_counter_holder.cpp  basic_counter_holder.h  basic_persistent_counter.cpp  basic_persistent_counter.h  icounter.h  live_counter.cpp  live_counter.h  mem_persistent_counter.cpp  mem_persistent_counter.h  persistent_counter.cpp  persistent_counter.h  state_counter.cpp  state_counter.h  time_counter.cpp  time_counter.h
components/ocs_fmt/: CMakeLists.txt
components/ocs_io/: CMakeLists.txt  adc_store.cpp  adc_store.h  basic_gpio.cpp  basic_gpio.h  default_gpio.cpp  default_gpio.h  delay_gpio.cpp  delay_gpio.h  gpio_guard.cpp  gpio_guard.h  iadc.h  igpio.h  oneshot_adc.cpp  oneshot_adc.h  oneshot_gpio.cpp  oneshot_gpio.h
components/ocs_iot/: CMakeLists.txt  Kconfig  basic_json_formatter.cpp  basic_json_formatter.h  cjson_array_formatter.cpp  cjson_array_formatter.h  cjson_builder.h  cjson_object_formatter.cpp  cjson_object_formatter.h  console_json_pipeline.cpp  console_json_pipeline.h  console_json_task.cpp  console_json_task.h  counter_json_formatter.cpp  counter_json_formatter.h  default_http_handler.h  default_json_formatter.h  dynamic_json_formatter.cpp  dynamic_json_formatter.h  fanout_json_formatter.cpp  fanout_json_formatter.h  field_json_formatter.cpp  field_json_formatter.h  http_command_handler.cpp  http_command_handler.h  http_data_handler.cpp  http_data_handler.h  http_pipeline.cpp  http_pipeline.h  http_server_pipeline.cpp  http_server_pipeline.h  http_system_handler.cpp  http_system_handler.h  http_system_state_handler.cpp  http_system_state_handler.h  ijson_formatter.h  json_data_pipeline.cpp  json_data_pipeline.h  ldr_sensor_json_formatter.cpp  ldr_sensor_json_formatter.h  (+21 more)
components/ocs_net/: CMakeLists.txt  Kconfig  ap_network.cpp  ap_network.h  basic_network.cpp  basic_network.h  default_mdns_driver.cpp  default_mdns_driver.h  fanout_network_handler.cpp  fanout_network_handler.h  http_client_builder.cpp  http_client_builder.h  http_client_reader.cpp  http_client_reader.h  http_server.cpp  http_server.h  iap_network.h  imdns_driver.h  inetwork_handler.h  ip_addr_to_str.cpp  ip_addr_to_str.h  ista_network.h  macros.h  mdns_pipeline.cpp  mdns_pipeline.h  mdns_provider.cpp  mdns_provider.h  mdns_store.cpp  mdns_store.h  mdns_to_str.cpp  mdns_to_str.h  netif_builder.cpp  netif_builder.h  noop_mdns_driver.cpp  noop_mdns_driver.h  rssi_to_signal_strength.cpp  rssi_to_signal_strength.h  rssi_to_str.cpp  rssi_to_str.h  sta_network.cpp  (+5 more)
components/ocs_pipeline/: CMakeLists.txt  Kconfig  console_json_pipeline.cpp  console_json_pipeline.h  console_json_task.cpp  console_json_task.h  counter_json_formatter.cpp  counter_json_formatter.h  http_data_handler.cpp  http_data_handler.h  http_pipeline.cpp  http_pipeline.h  http_server_pipeline.cpp  http_server_pipeline.h  http_system_handler.cpp  http_system_handler.h  http_system_state_handler.cpp  http_system_state_handler.h  json_data_pipeline.cpp  json_data_pipeline.h  network_json_formatter.cpp  network_json_formatter.h  registration_json_formatter.cpp  registration_json_formatter.h  system_counter_pipeline.cpp  system_counter_pipeline.h  system_json_formatter.cpp  system_json_formatter.h  system_pipeline.cpp  system_pipeline.h  system_state_json_formatter.cpp  system_state_json_formatter.h  telemetry_json_formatter.cpp  telemetry_json_formatter.h  version_json_formatter.cpp  version_json_formatter.h
components/ocs_scheduler/: CMakeLists.txt  async_func.cpp  async_func.h  async_func_scheduler.cpp  async_func_scheduler.h  async_task.cpp  async_task.h  async_task_scheduler.cpp  async_task_scheduler.h  constant_delay_estimator.cpp  constant_delay_estimator.h  fanout_task.cpp  fanout_task.h  high_resolution_timer.cpp  high_resolution_timer.h  idelay_estimator.h  itask.h  itask_scheduler.h  itimer.h  operation_guard_task.cpp  operation_guard_task.h  periodic_task_scheduler.cpp  periodic_task_scheduler.h  timer_store.cpp  timer_store.h
components/ocs_sensor/: CMakeLists.txt  Kconfig  basic_sensor.h  basic_sensor_task.h  default_yl69_sensor_task.cpp  default_yl69_sensor_task.h  ldr_sensor.cpp  ldr_sensor.h  ldr_sensor_task.cpp  ldr_sensor_task.h  relay_sensor.cpp  relay_sensor.h  safe_yl69_sensor_task.cpp  safe_yl69_sensor_task.h  yl69_sensor.cpp  yl69_sensor.h
components/ocs_system/: CMakeLists.txt  basic_delayer.cpp  basic_delayer.h  busy_loop_delayer.cpp  busy_loop_delayer.h  default_clock.cpp  default_clock.h  default_delayer.cpp  default_delayer.h  default_randomizer.cpp  default_randomizer.h  default_rebooter.cpp  default_rebooter.h  delay_rebooter.cpp  delay_rebooter.h  delayer_configuration.cpp  delayer_configuration.h  device_id.cpp  device_id.h  device_info.cpp  device_info.h  fanout_reboot_handler.cpp  fanout_reboot_handler.h  fanout_suspender.cpp  fanout_suspender.h  idelayer.h  ireboot_handler.h  irebooter.h  isuspend_handler.h  isuspender.h  low_power_delayer.cpp  low_power_delayer.h  reboot_task.cpp  reboot_task.h  reset_reason_to_str.cpp  reset_reason_to_str.h  suspender_guard.cpp  suspender_guard.h  system_state_builder.cpp  system_state_builder.h  (+2 more)
docs/: mdns.md  (+3 more)
main/: CMakeLists.txt  main.cpp
(+460 files in other folders)
