idf_component_register(
    SRCS
    "cjson_object_formatter.cpp"
    "cjson_array_formatter.cpp"
    "network_json_formatter.cpp"
    "fanout_json_formatter.cpp"
    "system_json_formatter.cpp"
    "string_json_formatter.cpp"
    "version_json_formatter.cpp"
    "system_counter_pipeline.cpp"
    "counter_json_formatter.cpp"
    "http_server_pipeline.cpp"
    "system_pipeline.cpp"
    "telemetry_json_formatter.cpp"
    "registration_json_formatter.cpp"
    "json_data_pipeline.cpp"
    "yl69_sensor_json_formatter.cpp"
    "ldr_sensor_json_formatter.cpp"
    "system_state_json_formatter.cpp"
    "http_system_state_handler.cpp"
    "dynamic_json_formatter.cpp"
    "console_json_task.cpp"
    "console_json_pipeline.cpp"
    "http_data_handler.cpp"
    "http_pipeline.cpp"
    "basic_json_formatter.cpp"
    "field_json_formatter.cpp"
    "http_system_handler.cpp"

    REQUIRES
    "json"
    "freertos"
    "ocs_net"
    "ocs_core"
    "ocs_diagnostic"
    "ocs_storage"
    "ocs_sensor"

    INCLUDE_DIRS
    ".."
)
