idf_component_register(
    SRCS
    "ds18b20/http_handler.cpp"
    "ds18b20/json_formatter.cpp"
    "ldr/json_formatter.cpp"
    "yl69/json_formatter.cpp"
    "network_json_formatter.cpp"
    "system_json_formatter.cpp"
    "system_counter_pipeline.cpp"
    "counter_json_formatter.cpp"
    "http_server_pipeline.cpp"
    "system_pipeline.cpp"
    "telemetry_json_formatter.cpp"
    "registration_json_formatter.cpp"
    "version_json_formatter.cpp"
    "json_data_pipeline.cpp"
    "system_state_json_formatter.cpp"
    "http_system_state_handler.cpp"
    "console_json_task.cpp"
    "console_json_pipeline.cpp"
    "http_data_handler.cpp"
    "http_pipeline.cpp"
    "http_system_handler.cpp"

    REQUIRES
    "ocs_io"
    "ocs_net"
    "ocs_http"
    "ocs_core"
    "ocs_status"
    "ocs_sensor"
    "ocs_onewire"
    "ocs_diagnostic"
    "ocs_storage"
    "ocs_fmt"
    "ocs_control"

    INCLUDE_DIRS
    ".."
)
