idf_component_register(
    SRCS
    "httpserver/http_pipeline.cpp"
    "httpserver/server_pipeline.cpp"
    "httpserver/ds18b20_handler.cpp"
    "httpserver/data_handler.cpp"
    "httpserver/system_handler.cpp"
    "httpserver/system_state_handler.cpp"
    "network_json_formatter.cpp"
    "system_json_formatter.cpp"
    "system_counter_pipeline.cpp"
    "counter_json_formatter.cpp"
    "system_pipeline.cpp"
    "telemetry_json_formatter.cpp"
    "registration_json_formatter.cpp"
    "version_json_formatter.cpp"
    "json_data_pipeline.cpp"
    "system_state_json_formatter.cpp"
    "console_json_task.cpp"
    "console_json_pipeline.cpp"

    REQUIRES
    "ocs_io"
    "ocs_net"
    "ocs_http"
    "ocs_core"
    "ocs_status"
    "ocs_sensor"
    "ocs_onewire"
    "ocs_diagnostic"
    "ocs_storage"
    "ocs_fmt"
    "ocs_control"

    INCLUDE_DIRS
    ".."
)
