idf_component_register(
    SRCS
    "yl69/sensor.cpp"
    "yl69/relay_sensor.cpp"
    "yl69/default_pipeline.cpp"
    "yl69/relay_pipeline.cpp"
    "yl69/soil_status_to_str.cpp"
    "ldr/sensor.cpp"
    "ldr/sensor_pipeline.cpp"
    "ds18b20/store.cpp"
    "ds18b20/sensor.cpp"
    "ds18b20/scratchpad.cpp"
    "ds18b20/sensor_pipeline.cpp"
    "ds18b20/resolution_to_str.cpp"
    "ds18b20/parse_configuration.cpp"
    "sht41/sensor.cpp"
    "sht41/sensor_pipeline.cpp"
    "bme280/sensor.cpp"
    "bme280/spi_sensor_pipeline.cpp"
    "bme280/spi_transceiver.cpp"

    REQUIRES
    "ocs_io"
    "ocs_core"
    "ocs_status"
    "ocs_system"
    "ocs_storage"
    "ocs_scheduler"
    "ocs_diagnostic"
    "ocs_onewire"
    "ocs_i2c"
    "ocs_algo"

    INCLUDE_DIRS
    ".."
)
